Fixed text alignment for responsiveness + header colour while in signup flow.

--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -232,7 +232,7 @@ $mobile-port: 321px;
 
     .wrapper {
         width: 100%;
-        padding: 30px 60px;
+        padding: 30px 0;
     }
 
     // Form
@@ -293,7 +293,11 @@ $mobile-port: 321px;
                 .key-content {
                     margin: 15px 30px 30px 0;
                     width: 100%;
-                    max-width: 330px;
+                    text-align: center;
+                    
+                    p {
+                        margin: 0 auto;
+                    }
                 }
             }
 
