--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -4,9 +4,18 @@ $nav-width: $wrapper-width;
 
 body.demo-flow .view-header {
     background: $white;
-    a { color: $medium-grey !important; }
-}
+    a {
+        color: $medium-grey !important;
+        
+        &:hover {
+            border-bottom: 2px solid $medium-grey;
+        }
 
+        &.outline-btn {
+            border: 1px solid $medium-grey !important;
+        }
+    }
+}
 
 
 .home .view-header {
