--- a/src/styles/partials/_home.scss
+++ b/src/styles/partials/_home.scss
@@ -90,7 +90,7 @@
 
                     font-size: $base-font-size;
 
-                    h2 { max-width: 200px; }
+                    p { max-width: 340px; }
                     &:first-child { margin-left: 0; }
                     &:last-child { margin-right: 0; }
                 }
